--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic02.jpg" alt="" />
+										<img src="images2/code.jpeg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="project1.html" class="link">Project 1</a></h3>
@@ -63,25 +63,25 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic03.jpg" alt="" />
+										<img src="images2/f16.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="index.html" class="link">Project 2</a></h3>
+										<h3><a href="project2.html" class="link">Project 2</a></h3>
 										<p>project 2</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic04.jpg" alt="" />
+										<img src="images2/vader.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="index.html" class="link">Project 3</a></h3>
+										<h3><a href="project3.html" class="link">Project 3</a></h3>
 										<p>Project 3</p>
 									</header>
 								</article>
 								<article>
 									<span class="image">
-										<img src="images/pic05.jpg" alt="" />
+										<img src="images2/point.jpg" alt="" />
 									</span>
 									<header class="major">
 										<h3><a href="index.html" class="link">Final project</a></h3>
