--- a/resume.html
+++ b/resume.html
@@ -32,6 +32,8 @@
 							<li><a href="index.html">Home</a></li>
 							<li><a href="resume.html">Resume</a></li>
 							<li><a href="project1.html">Project 1</a></li>
+                            <li><a href="project2.html">Project 2</a></li>
+                            <li><a href="project3.html">Project 3</a></li>
 						</ul>
 					</nav>
 
