--- a/project2.html
+++ b/project2.html
@@ -73,6 +73,7 @@
                                     <span class="image main"><img src="images2/cut.jpg" alt="" /></span>
                                     <p>I then took out the pieces, and put my object together.</p>
                                     <span class="image main"><img src="images2/cutfin.jpg" alt="" /></span>
+                                    <p><a href="https://www.thingiverse.com/thing:6527397">Here</a> are the files.</p>
 								</div>
 							</section>
 
