--- a/project3.html
+++ b/project3.html
@@ -66,6 +66,7 @@
 								        <div class="col-4"><span class="image fit"><img src="images2/scanbleu2.jpg" alt="" /></span></div>
 								        <div class="col-4"><span class="image fit"><img src="images2/scangris.jpg" alt="" /></span></div>
 								    </div>
+                                    <p><a href="https://www.thingiverse.com/thing:6527399">Here</a> are the files.</p>
                                 </div>
 							</section>
 
